# life

./: .gitignore  README.md
.github/workflows/: pages.yml
backend/: .env.example  Cargo.toml  Dockerfile  fly.toml
backend/migrations/: 0001_create_logs.sql  0002_add_music_types.sql  0003_add_workout_type.sql  0004_add_batch2.sql
backend/src/: groq.rs  learning.rs  main.rs  models.rs  music.rs  rank.rs  routes.rs  usda.rs  wger.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  Guide.tsx  Gym.tsx  Learning.tsx  Music.tsx  Places.tsx  RateModal.tsx  Row.tsx  Sleep.tsx  Travel.tsx  api.ts  styles.css  types.ts
